# claude-bot

./: .env.example  .gitignore  README.md  allowlist.example.json  dev.py  pyproject.toml
docs/: architecture.md
src/claudebot/: allowlist.py  claude_invoker.py  claude_usage.py  config.py  line_client.py  meeting_scheduler.py  meeting_store.py  server.py  session_store.py
